--- a/mentbotapp/src/app/login/login.component.html
+++ b/mentbotapp/src/app/login/login.component.html
@@ -1,54 +1,107 @@
 <div class="app-body">
-  <main class="main d-flex align-items-center" >
+  <main class="main d-flex align-items-center">
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
-          <div class="card-group" style="background-color:white;" >
-            <div class="card p-4" style="background-color:#2C3333;">
-              <div class="card-body" style="background-color:#2C3333;">
-                <h2 style="text-align:center; color:#F76E11;"><strong>Mentbot</strong></h2>
+          <div class="card-group" style="background-color: white">
+            <div class="card p-4" style="background-color: #2c3333">
+              <div class="card-body" style="background-color: #2c3333">
+                <h2 style="text-align: center; color: #f76e11">
+                  <strong>Mentbot</strong>
+                </h2>
                 <!-- <p><em>Be The Change.</em></p>
                 <p><em>Share your feelings.</em></p>
                 <p><em>You are not alone.</em></p> -->
-                <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-                  <h1 style="color:#573391;">Login</h1>
+                <form
+                 name="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm" 
+                >
+                  <h1 style="color: #573391">Login</h1>
                   <p class="text-muted">Sign In to your account</p>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="icon-user"></i></span>
+                      <span class="input-group-text"
+                        ><i class="icon-user"></i
+                      ></span>
                     </div>
-                    <input type="text" class="form-control" placeholder="Username" autocomplete="username" name="username" [(ngModel)]="form.username" #username="ngModel" required>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Username"
+                      autocomplete="username"
+                      formControlName="username"
+                      required
+                    />
+                  </div>
+                  <div *ngIf="loginForm.get('username')!.invalid && (loginForm.get('username')!.dirty || loginForm.get('username')!.touched)">
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="loginForm.get('username')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
                   </div>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="icon-lock"></i></span>
+                      <span class="input-group-text"
+                        ><i class="icon-lock"></i
+                      ></span>
                     </div>
-                    <input type="password" class="form-control" placeholder="Password" autocomplete="current-password" name="password" [(ngModel)]="form.password" #password="ngModel" required>
+                    <input
+                      type="password"
+                      class="form-control"
+                      placeholder="Password"
+                      formControlName="password"
+                      required
+                    />
+                  </div>
+                  <div *ngIf="loginForm.get('password')!.invalid && (loginForm.get('password')!.dirty || loginForm.get('password')!.touched)">
+                    <small
+                      class="form-text text-danger"
+                      *ngIf="loginForm.get('password')?.errors?.required"
+                    >
+                      This field is required.
+                    </small>
                   </div>
                   <div class="row">
-                    <div class="col-6">
-                      <button type="button" class="btn btn-primary px-4" style="background-color:#95CD41;width: 220%;">Login</button>
+                    <div class="col w-100">
+                      <button
+                        type="submit"
+                        class="btn btn-primary px-4 w-100"
+                        style="background-color: #95cd41"
+                     
+                      >
+                        Login
+                      </button>
                     </div>
-                   </div>
-                   <div class="row">
-                    <div class="col-6">
-                   <button type="button" class="btn btn-primary active mt-3" style="background-color:#F76E11; width: 220%;" routerLink="/register">Register Now!</button>
+                  </div>
+                  <div class="row">
+                    <div class="col w-100">
+                      <button
+                        type="button"
+                        class="btn btn-primary active mt-3 w-100"
+                        style="background-color: #f76e11"
+                        routerLink="/register"
+                      >
+                        Register Now!
+                      </button>
                     </div>
                   </div>
 
-                   <div class="form-group">
-                       <div class="alert alert-danger" role="alert" *ngIf="isLoginFailed">
-                            Login failed: {{errorMessage}}
-                       </div>
-                   </div>
+                  <div class="form-group">
+                    <div
+                      class="alert alert-danger"
+                      role="alert"
+                      *ngIf="isLoginFailed"
+                    >
+                      Login failed: {{ errorMessage }}
+                    </div>
+                  </div>
                 </form>
                 <div class="alert alert-success" *ngIf="isLoggedIn">
-                    Logged in as {{roles}}.
-
+                  Logged in as {{ roles }}.
                 </div>
               </div>
             </div>
-            
           </div>
         </div>
       </div>
