--- a/mentbotapp/src/app/register/register.component.html
+++ b/mentbotapp/src/app/register/register.component.html
@@ -185,12 +185,12 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-check icons font"></i></span>
                   </div>
-                  <select class="form-control" formControlName="role" >
-                    <option>ROLE_DOCTOR</option>
-                    <option>ROLE_PATIENT</option>
+                  <select  class="form-control" formControlName="role" >
+                    <option value="0">ROLE_DOCTOR</option>
+                    <option value="1">ROLE_PATIENT</option>
                   </select>
                 </div>
-                <button type="submit" class="btn btn-block btn-success mt-3">Create Account</button>
+                <button type="submit" class="btn btn-block btn-success mt-3" >Create Account</button>
                 <div class="alert alert-warning" *ngIf="isSignUpFailed">
                     Registration failed! <br/> {{errorMessage}}
                 </div>
