--- a/mentbotapp/src/app/home/home.component.html
+++ b/mentbotapp/src/app/home/home.component.html
@@ -24,7 +24,7 @@
       
         <div class="divider"></div>
        
-        <a class="dropdown-item" href="#"> Logout</a>
+        <a class="dropdown-item" href="#" (click)="logout()"> Logout</a>
       </div>
     </li>
   </ul>
