--- a/mentbotapp/src/app/doctors/doctors-dashboard/doctors-dashboard.component.html
+++ b/mentbotapp/src/app/doctors/doctors-dashboard/doctors-dashboard.component.html
@@ -3,7 +3,7 @@
       <div class="card">
         <div class="card-header">
         
-          <i class="bg-indigo theme-color mb-3 w-75 rounded mb-2 "></i><b> <em>Appointments </em></b>
+          <i class="bg-indigo theme-color mb-3 w-75 rounded mb-2 "></i><b> <em>My Appointments </em></b>
            </div>
         <!-- </div> -->
         <div class="card-body">
