--- a/mentbotapp/src/app/patients/patients-dashboard/patients-dashboard.component.html
+++ b/mentbotapp/src/app/patients/patients-dashboard/patients-dashboard.component.html
@@ -1,3 +1,37 @@
-<div>
-  <app-chatbot></app-chatbot>
-</div>
+<div class="row">
+    <div class="col-lg-12">
+      <div class="card">
+        <div class="card-header">
+        
+          <i class="bg-indigo theme-color mb-3 w-75 rounded mb-2 "></i><b> <em>Appointment Status </em></b>
+           </div>
+        <!-- </div> -->
+        <div class="card-body">
+          <table class="table table-sm">
+            <thead>
+              <tr>
+                <th>Doctor Name</th>
+                <th>Date </th>
+                <th>Speciality</th>
+                <th>Slot</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>x</td>
+                <td>y</td>
+                <td>z</td>
+                <td>z</td>
+                <td>j</td>
+              </tr>
+              
+              
+            </tbody>
+          </table>
+          
+        </div>
+      </div>
+    </div>
+    
+   
