--- a/mentbotapp/src/app/patients/add-details/add-details.component.html
+++ b/mentbotapp/src/app/patients/add-details/add-details.component.html
@@ -13,13 +13,20 @@
                 <p class="form-control-static">Username</p>
               </div> -->
             </div>
-            <!-- <div class="form-group row">
+            <div class="form-group row">
               <label class="col-md-3 col-form-label" for="text-input">Text Input</label>
               <div class="col-md-9">
                 <input type="text" id="text-input" name="text-input" class="form-control" placeholder="Text">
                 <span class="help-block">This is a help text</span>
               </div>
-            </div> -->
+            </div>
+            <div class="form-group row">
+                <label class="col-md-3 col-form-label" for="text-input">Text Input</label>
+                <div class="col-md-9">
+                  <input type="text" id="text-input" name="text-input" class="form-control" placeholder="Text">
+                  <span class="help-block">This is a help text</span>
+                </div>
+              </div>
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="email-input">Email Input</label>
               <div class="col-md-9">
@@ -34,13 +41,13 @@
                 <span class="help-block">Please enter a complex password</span>
               </div>
             </div> -->
-            <div class="form-group row">
+            <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="date-input">Date of Appointment</label>
               <div class="col-md-9">
                 <input class="form-control" id="date-input" type="date" name="date-input" placeholder="date">
                 <span class="help-block">Please enter a valid date</span>
               </div>
-            </div>
+            </div> -->
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="disabled-input">Disabled Input</label>
               <div class="col-md-9">
@@ -53,8 +60,8 @@
                 <textarea id="textarea-input" name="textarea-input" rows="9" class="form-control" placeholder="Content.."></textarea>
               </div>
             </div> -->
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="select1">Select Speciality</label>
+            <!-- <div class="form-group row">
+              <label class="col-md-3 col-form-label" for="select1"></label>
               <div class="col-md-9">
                 <select id="select1" name="select1" class="form-control">
                   <option value="0">Please select</option>
@@ -63,8 +70,8 @@
                   <option value="3">Option #3</option>
                 </select>
               </div>
-            </div>
-            <div class="form-group row">
+            </div> -->
+            <!-- <div class="form-group row">
                 <label class="col-md-3 col-form-label" for="select1">Select Doctor</label>
                 <div class="col-md-9">
                   <select id="select1" name="select1" class="form-control">
@@ -74,9 +81,9 @@
                     <option value="3">Option #3</option>
                   </select>
                 </div>
-              </div>
+              </div> -->
 
-              <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Booking</button>
+              <!-- <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Booking</button> -->
               
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="select2">Select Large</label>
@@ -129,7 +136,7 @@
               </div>
             </div> -->
             <div class="form-group row">
-              <label class="col-md-3 col-form-label" >Slots Available</label>
+              <label class="col-md-3 col-form-label" >Gender</label>
               <div class="col-md-9 col-form-label">
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="radios" id="radio1" value="option1" checked>
@@ -223,7 +230,7 @@
           </form>
         </div>
         <div class="card-footer">
-          <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Confirm Booking</button>
+          <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Details</button>
           <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
         </div>
       </div>
