new components added

--- a/mentbotapp/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/mentbotapp/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -10,10 +10,11 @@
           <table class="table table-sm">
             <thead>
               <tr>
-                <th>Username</th>
-                <th>Date registered</th>
-                <th>Role</th>
-                <th>Status</th>
+                <th>Patient name</th>
+                <th>Doctor name</th>
+                <th>Date</th>
+                <th>Slot</th>
+                <th>Actions</th>
               </tr>
             </thead>
             <tbody>
@@ -22,8 +23,9 @@
                 <td>Leopold Gáspár</td>
                 <td>2012/01/21</td>
                 <td>Staff</td>
+                <td>Staff</td>
                 <td>
-                    <span><button type="update" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Update</button>
+                    <span> <!--<button type="update" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Update</button>  -->
                       <button type="delete" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Delete</button></span>
                   </td>
               </tr>
