--- a/mentbotapp/src/app/doctors/addspeciality/addspeciality.component.html
+++ b/mentbotapp/src/app/doctors/addspeciality/addspeciality.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
       <div class="card">
         <div class="card-header">
-          <strong><em>My Details</em></strong>
+          <strong><em>My Speciality</em></strong>
         </div>
         <div class="card-body">
           <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
@@ -33,25 +33,25 @@
                 <span class="help-block">Please enter a complex password</span>
               </div> 
             </div> -->
-            <div class="form-group row">
+            <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="date-input">Practing Date </label>
               <div class="col-md-9">
                 <input class="form-control" id="date-input" type="date" name="date-input" placeholder="date">
                 <span class="help-block">Please enter a valid date</span>
               </div>
-            </div>
+            </div> -->
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="disabled-input">Disabled Input</label>
               <div class="col-md-9">
                 <input type="text" id="disabled-input" name="disabled-input" class="form-control" placeholder="Disabled" disabled>
               </div>
             </div> -->
-            <div class="form-group row">
+            <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="textarea-input">Professional Statement</label>
               <div class="col-md-9">
                 <textarea id="textarea-input" name="textarea-input" rows="9" class="form-control" placeholder="Content.."></textarea>
               </div>
-            </div>
+            </div> -->
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="select1">Select</label>
               <div class="col-md-9">
@@ -74,8 +74,8 @@
                 </select>
               </div>
             </div> -->
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="select3">Select Small</label>
+            <div class="form-group row">
+              <label class="col-md-3 col-form-label" for="select3">Select Speciality</label>
               <div class="col-md-9">
                 <select id="select3" name="select3" class="form-control form-control-sm">
                   <option value="0">Please select</option>
@@ -84,7 +84,7 @@
                   <option value="3">Option #3</option>
                 </select>
               </div>
-            </div> -->
+            </div>
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="disabledSelect">Disabled Select</label>
               <div class="col-md-9">
@@ -208,8 +208,8 @@
           </form>
         </div>
         <div class="card-footer">
-          <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Details</button>
-          <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
+          <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Speciality</button>
+          <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
         </div>
       </div>
     </div>
