--- a/mentbotapp/src/app/doctors/doctors-dashboard/doctors-dashboard.component.html
+++ b/mentbotapp/src/app/doctors/doctors-dashboard/doctors-dashboard.component.html
@@ -10,10 +10,10 @@
           <table class="table table-sm">
             <thead>
               <tr>
-                <th>Username</th>
-                <th>Date registered</th>
-                <th>Role</th>
-                <th>Status</th>
+                <th>Patient name</th>
+                <th>Date</th>
+                <th>Slot</th>
+                <th>Action</th>
               </tr>
             </thead>
             <tbody>
