--- a/mentbotapp/src/app/register/register.component.html
+++ b/mentbotapp/src/app/register/register.component.html
@@ -188,6 +188,7 @@
                   <select  class="form-control" formControlName="role" >
                     <option value="0">ROLE_DOCTOR</option>
                     <option value="1">ROLE_PATIENT</option>
+                    <option value="2">ROLE_ADMIN</option>
                   </select>
                 </div>
                 <button type="submit" class="btn btn-block btn-success mt-3" >Create Account</button>
