--- a/mentbotapp/src/app/patients/chatbot/chatbot.component.html
+++ b/mentbotapp/src/app/patients/chatbot/chatbot.component.html
@@ -174,9 +174,9 @@
                         <img class="avatar avatar-xs"
                             src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
 
-                        <input class="publisher-input" type="text"  [(ngModel)]="name" class="form-control" name="name" >
-                        <a class="publisher-btn text-info" type="button" (click)="sendMessage()">
-                            <i class="fa fa-paper-plane"></i>
+                            <input class="publisher-input" type="text" #message class="form-control" name="name" >
+                            <a class="publisher-btn text-info" type="button" (click)="sendMessage(message.value)">
+                                <i class="fa fa-paper-plane"></i>
                         </a>
                     </div>
 
