--- a/mentbotapp/src/app/patients/chatbot/chatbot.component.html
+++ b/mentbotapp/src/app/patients/chatbot/chatbot.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="" id="">
     <div class="padding w-100">
         <div class="row container d-flex justify-content-center">
@@ -37,8 +35,8 @@
                         <img class="avatar avatar-xs"
                             src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
 
-                        <input class="publisher-input" type="text" #message class="form-control" name="name" >
-                        <a class="publisher-btn text-info" type="button" (click)="sendMessage(message.value)">
+                        <input class="publisher-input" type="text" [(ngModel)]="message" class="form-control" >
+                        <a class="publisher-btn text-info" type="button" (click)="sendMessage()">
                             <i class="fa fa-paper-plane"></i>
                         </a>
                     </div>
