--- a/mentbotapp/src/app/register/register.component.html
+++ b/mentbotapp/src/app/register/register.component.html
@@ -185,10 +185,10 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-check icons font"></i></span>
                   </div>
-                  <select  class="form-control" formControlName="role" >
-                    <option value="0">ROLE_DOCTOR</option>
-                    <option value="1">ROLE_PATIENT</option>
-                    <option value="2">ROLE_ADMIN</option>
+                  <select class="form-control" formControlName="role" >
+                    <option>ROLE_DOCTOR</option>
+                    <option>ROLE_PATIENT</option>
+                    <option>ROLE_ADMIN</option>
                   </select>
                 </div>
                 <button type="submit" class="btn btn-block btn-success mt-3" >Create Account</button>
