--- a/mentbotapp/src/app/patients/chatbot/chatbot.component.html
+++ b/mentbotapp/src/app/patients/chatbot/chatbot.component.html
@@ -13,12 +13,12 @@
                             <div class="media media-chat"> <img class="avatar" *ngIf="item.name === 'bot'"
                                     src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
                                 <div class="media-body">
-                                    <p><span>{{item.name}}: </span> {{item.message}}</p>
+                                    <p><span>bot </span> testinggg</p>
                                 </div>
                             </div>
                             <div class="media media-chat media-chat-reverse" *ngIf="item.name === 'you'">
                                 <div class="media-body">
-                                    <p><span>{{item.name}}: </span> {{item.message}}</p>
+                                    <p><span>you </span> Hello Test</p>
                                 </div>
                             </div>
                         </div>
