--- a/mentbotapp/src/app/patients/add-details/add-details.component.html
+++ b/mentbotapp/src/app/patients/add-details/add-details.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-12">
       <div class="card">
         <div class="card-header">
-          <strong><em>Add My Appointment</em></strong> 
+          <strong><em>Add My Details</em></strong> 
         </div>
         <div class="card-body">
           <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
@@ -14,17 +14,17 @@
               </div> -->
             </div>
             <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="text-input">Text Input</label>
+              <label class="col-md-3 col-form-label" for="text-input">BloodGroup</label>
               <div class="col-md-9">
-                <input type="text" id="text-input" name="text-input" class="form-control" placeholder="Text">
-                <span class="help-block">This is a help text</span>
+                <input type="text" id="text-input" name="text-input" class="form-control" placeholder="BloodGroup" >
+                
               </div>
             </div>
             <div class="form-group row">
-                <label class="col-md-3 col-form-label" for="text-input">Text Input</label>
+                <label class="col-md-3 col-form-label" for="text-input">Gender</label>
                 <div class="col-md-9">
-                  <input type="text" id="text-input" name="text-input" class="form-control" placeholder="Text">
-                  <span class="help-block">This is a help text</span>
+                  <input type="text" id="text-input" name="text-input" class="form-control" placeholder="Gender">
+                  
                 </div>
               </div>
             <!-- <div class="form-group row">
@@ -135,7 +135,7 @@
                 </select>
               </div>
             </div> -->
-            <div class="form-group row">
+            <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" >Gender</label>
               <div class="col-md-9 col-form-label">
                 <div class="form-check">
@@ -157,7 +157,7 @@
                   </label>
                 </div>
               </div>
-            </div>
+            </div> -->
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="inline-radios">Inline Radios</label>
               <div class="col-md-9 col-form-label">
