--- a/mentbotapp/src/app/patients/addappointment/addappointment.component.html
+++ b/mentbotapp/src/app/patients/addappointment/addappointment.component.html
@@ -76,7 +76,7 @@
                 </div>
               </div>
 
-              <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Booking</button>
+              <!-- <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Booking</button> -->
               
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="select2">Select Large</label>
