--- a/mentbotapp/src/app/patients/addappointment/addappointment.component.html
+++ b/mentbotapp/src/app/patients/addappointment/addappointment.component.html
@@ -130,7 +130,7 @@
             </div> -->
             <div class="form-group row">
               <label class="col-md-3 col-form-label" >Slots Available</label>
-              <div class="col-md-9 col-form-label">
+              <!-- <div class="col-md-9 col-form-label">
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="radios" id="radio1" value="option1" checked>
                   <label class="form-check-label" for="radio1">
@@ -149,8 +149,8 @@
                     Option 3
                   </label>
                 </div>
-              </div>
-            </div>
+              </div>-->
+            </div> 
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="inline-radios">Inline Radios</label>
               <div class="col-md-9 col-form-label">
